fix: use success response wrapper for all routes
