# docs/swagger.json
@@ -200,7 +200,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/response.SuccessDataResponse-organizationDao_OrganizationInput"
+                            "$ref": "#/definitions/organizationDao.OrganizationInput"
                         }
                     }
                 ],
@@ -208,7 +208,7 @@
                     "201": {
                         "description": "Organization created",
                         "schema": {
-                            "$ref": "#/definitions/model.Organizations"
+                            "$ref": "#/definitions/response.SuccessDataResponse-model_Organizations"
                         }
                     },
                     "400": {
@@ -376,7 +376,7 @@
                     "200": {
                         "description": "User info",
                         "schema": {
-                            "$ref": "#/definitions/model.Users"
+                            "$ref": "#/definitions/response.SuccessDataResponse-model_Users"
                         }
                     },
                     "500": {
@@ -591,11 +591,11 @@
                 }
             }
         },
-        "response.SuccessDataResponse-organizationDao_OrganizationInput": {
+        "response.SuccessDataResponse-model_Users": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/organizationDao.OrganizationInput"
+                    "$ref": "#/definitions/model.Users"
                 }
             }
         },
